<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicWidget8_1Activity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="143dp"
        android:layout_height="36dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="11dp"
        android:text="@string/texto_8_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/texto_8_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RadioG1" />

    <RadioGroup
        android:id="@+id/RadioG1"
        android:layout_width="391dp"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/Vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vertical" />

        <RadioButton
            android:id="@+id/Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horizontal" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/RadioG2"
        android:layout_width="408dp"
        android:layout_height="96dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/Izq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/izq" />

        <RadioButton
            android:id="@+id/Centro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/centro" />

        <RadioButton
            android:id="@+id/Dcha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dcha" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>