<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicWidget8Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="184dp"
        tools:layout_editor_absoluteY="211dp">

        <Button
            android:id="@+id/Radio_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_groups"
            android:onClick="B1"/>

        <Button
            android:id="@+id/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttons"
            android:onClick="B2"/>

        <Button
            android:id="@+id/URL_demo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_demo"
            android:onClick="B3"/>

        <Button
            android:id="@+id/Overlap_Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overlap_buttons"
            android:onClick="B4"/>

        <Button
            android:id="@+id/ScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scrollview"
            android:onClick="B5"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>